Fixed navbar styles on mobile

--- a/themes/minimal/static/css/main.css
+++ b/themes/minimal/static/css/main.css
@@ -128,6 +128,23 @@ iframe {
     border-bottom: none;
 }
 
+.navbar-default .navbar-collapse, .navbar-default .navbar-form {
+    border-top: solid 0px transparent !important;
+    background-color: rgba(255,255,255,0.02);
+}
+
+.navbar-default .navbar-toggle {
+    border-color: transparent !important;
+}
+
+.navbar-default .navbar-toggle .icon-bar {
+    background-color: #fff !important;
+}
+
+.navbar-default .navbar-toggle:focus, .navbar-default .navbar-toggle:hover {
+    background-color: transparent !important;
+}
+
 /*navigation bar icons*/
 
 .navbar-icon {
@@ -268,7 +285,11 @@ img {
     }
 
     .navbar-nav:first-of-type {
-        margin-left: 25px !important;
+        margin-left: 15px !important;
+    }
+
+    .navbar-default .navbar-collapse, .navbar-default .navbar-form {
+        background-color: rgba(255,255,255,0);
     }
 
 
